# 2sem-Lab5Hash-C

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
Lab5Hash/: CMakeLists.txt  cache.c  cache.h  check.c  check.h  functions.c  functions.h  main.c  memory.c  memory.h  menu.c  menu.h
