cmake_minimum_required(VERSION 3.24)
project(2sem-Lab5Hash-C)

set(CMAKE_C_STANDARD 99)

add_executable(2sem-Lab5Hash-C Lab5Hash/main.c Lab5Hash/check.c Lab5Hash/check.h Lab5Hash/cache.c Lab5Hash/cache.h Lab5Hash/memory.c Lab5Hash/memory.h Lab5Hash/menu.c Lab5Hash/menu.h Lab5Hash/functions.c Lab5Hash/functions.h)
